# community-reading-list

./: CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  zensical.toml
.github/: tags.yml
.github/ISSUE_TEMPLATE/: config.yml  edit-literature.yml  edit-tutorial.yml  suggest-literature-lecture-notes.yml  suggest-literature-paper.yml  suggest-literature-textbook.yml  suggest-literature.yml  suggest-tutorial.yml
.github/workflows/: _suggest-literature-to-pr.yml  edit-page-to-pr.yml  lint-tags.yml  suggest-lecture-notes-to-pr.yml  suggest-literature-to-pr.yml  suggest-paper-to-pr.yml  suggest-textbook-to-pr.yml  suggest-tutorial-to-pr.yml
docs/: index.md
docs/javascripts/: edit-button.js
docs/literature/: index.md
docs/literature/Machine Learning/: mitchell1997machine-learning.md
docs/literature/materials/blanket/: Mistrangelo_2021_Liquid-metal-blankets-MHD-guidelines.md  Mistrangelo_2021_MHD-R&D-Activities-for-Liquid-Metal-Blankets.md
docs/literature/materials/structural/: bhattacharya_2022_irradiation-structural-materials-review.md
docs/literature/plasma/: index.md
docs/literature/plasma/MCF/: EPFL_Plasma_Lectures.md  (+7 more)
docs/stylesheets/: enhanced.css  reference.css  theme.css
docs/tutorials/: EPOCH.md  SMILEI.md  TGLF.md  gyrokinetic-codes.md  gyrokinetic-theory.md  index.md  pyrokinetics.md
docs/tutorials/exhaust_modelling/: HEAT.md  Hermes-3_getting_started.md
overrides/partials/: actions.html  comments.html  logo.html
scripts/: contributors.py  doi_reference.py  lint_tags.py  title_reference.py
tests/: README.md  test_lint_tags.py
(+25 files in other folders)
